Cleaned up project

--- a/SmebyFX_blog.Data/SmebyFX_blog.Data.csproj
+++ b/SmebyFX_blog.Data/SmebyFX_blog.Data.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>SmebyFX_blog.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -70,6 +70,13 @@
     <Content Include="SmebyFX_blog_local_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>SmebyFX_blog_local.mdf</DependentUpon>
+    </Content>
+    <Content Include="TestDB_Empty.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestDB_Empty_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>TestDB_Empty.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <ItemGroup>
