--- a/SmebyFX_blog.Core/SmebyFX_blog.Core.csproj
+++ b/SmebyFX_blog.Core/SmebyFX_blog.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{41BFD855-86C4-43AA-992F-A78575A090C7}</ProjectGuid>
+    <ProjectGuid>{BA51AE73-A22B-4708-9EEC-8470B9DCFDEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmebyFX_blog.Shared</RootNamespace>
-    <AssemblyName>SmebyFX_blog.Shared</AssemblyName>
+    <RootNamespace>SmebyFX_blog.Core</RootNamespace>
+    <AssemblyName>SmebyFX_blog.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,8 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\PostRepository.cs" />
+    <Compile Include="Services\PostService.cs" />
+    <Compile Include="Services\PostService_old.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SmebyFX_blog.Shared\SmebyFX_blog.Shared.csproj">
+      <Project>{41BFD855-86C4-43AA-992F-A78575A090C7}</Project>
+      <Name>SmebyFX_blog.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
