--- a/SmebyFX_blog.Models/SmebyFX_blog.Models.csproj
+++ b/SmebyFX_blog.Models/SmebyFX_blog.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{41BFD855-86C4-43AA-992F-A78575A090C7}</ProjectGuid>
+    <ProjectGuid>{C02AB9A7-A95D-418F-B44F-F899C29FFEF5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmebyFX_blog.Shared</RootNamespace>
-    <AssemblyName>SmebyFX_blog.Shared</AssemblyName>
+    <RootNamespace>SmebyFX_blog.Models</RootNamespace>
+    <AssemblyName>SmebyFX_blog.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\IEnumerableExtensions.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
