Added Azure DocumentDB integration - temp commit

--- a/SmebyFX_blog.Web/Web.config
+++ b/SmebyFX_blog.Web/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
+    <add name="DocumentDbEndpointUrl" connectionString="https://smebyfx-blog.documents.azure.com:443/" />
     <add name="blogDBconnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=E:\Prosjekter\Web\SmebyFX_blog\SmebyFX_blog.Data\SmebyFX_blog_local.mdf;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
@@ -17,6 +18,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AutomaticAppStartup" value="false" />
+    <add key="DocumentDbAuthorizationKey" value="" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -67,7 +69,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
