--- a/SmebyFX_blog.Core/SmebyFX_blog.Core.csproj
+++ b/SmebyFX_blog.Core/SmebyFX_blog.Core.csproj
@@ -30,6 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Azure.Documents.Client">
+      <HintPath>..\packages\Microsoft.Azure.Documents.Client.0.9.2-preview\lib\net40\Microsoft.Azure.Documents.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -41,12 +48,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DbConfig\DocumentDbInitialization.cs" />
     <Compile Include="Repositories\PostRepository.cs" />
     <Compile Include="Services\PostService.cs" />
     <Compile Include="Services\PostService_old.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\SmebyFX_blog.Models\SmebyFX_blog.Models.csproj">
+      <Project>{C02AB9A7-A95D-418F-B44F-F899C29FFEF5}</Project>
+      <Name>SmebyFX_blog.Models</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SmebyFX_blog.Shared\SmebyFX_blog.Shared.csproj">
       <Project>{41BFD855-86C4-43AA-992F-A78575A090C7}</Project>
       <Name>SmebyFX_blog.Shared</Name>
